@@ -25,7 +25,7 @@ reload the project.
 ----------------------------------------------------------------------
  OmegaT 2.3.0
  ----------------------------------------------------------------------
-   7 Enhancements
+   9 Enhancements
    4 Bug fixes
    2 Localisation updates
 ----------------------------------------------------------------------
@@ -40,6 +40,9 @@ reload the project.
   http://sourceforge.net/support/tracker.php?aid=3027339
 
   - Ability to translate WordArt in MS Office files
+  http://sourceforge.net/support/tracker.php?aid=3311077
+
+  - Add .xliff extension to the XLIFF filter
   http://sourceforge.net/support/tracker.php?aid=3311077
 
   Other enhancements:
